# anima_campaign

./: CHANGELOG.rst  Makefile  Manifest.in  setup.cfg
anima/: __init__.py  __main__.py  navigation.py
anima/static/css/: base.css  fonts.css
anima/templates/: 404.html  background.html  index.html  squelette.html
anima/templates/acte-1/: acte-1.html  index.html  introduction.html
