[metadata]
name = anima_campaign
version = 0.1.dev0
author = mcuchet
author_email = martin.cuchet+anima@gmail.com
url = https://github.com/Spigushe/anima_campaign
description="Site personnel pour l'organisation de campagne anima",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = anima jdr
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    Natural Language :: French
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    flask
	unidecode

[options.entry_points]
console_scripts =
    anima = anima:main

[options.extras_require]
dev =
    black
    doc8
    flake8
    ipython
    uwsgi
    zest.releaser[recommended]

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[extract_messages]
keywords = lazy_gettext
charset = utf-8
add-comments = TRANSLATORS:
width = 120
mapping-file = babel.cfg
input-dirs = anima
output-file = messages.pot

[update_catalog]
width = 120
input-file = messages.pot
output-dir = anima/translations

[compile_catalog]
domain = messages
directory = anima/translations

[zest.releaser]
create-wheel = yes
